[package]
name = "leptos-ws-echo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.10.0"
js-sys = "0.3.64"
leptos = { version = "0.4.5", features = ["nightly", "csr"] }
log = "0.4.20"
rand = "0.8.5"
thiserror = "1.0.50"
wasm-bindgen = "0.2.87"
web-sys = "0.3.64"
